documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32VB.BAS


Public Declare Function C41_AsciiFrom Lib "C41W32.DLL" Alias "_C41_AsciiFrom@8" (ByRef asciistr As String, ByVal radixval As Long) As Long
Public Declare Function C41_AsciiTo Lib "C41W32.DLL" Alias "_C41_AsciiTo@16" (ByVal value As Long, ByRef asciistr As String, ByVal numbits As Long, ByVal radixval As Long) As Long
Public Declare Function C41_BCDGetData Lib "C41W32.DLL" Alias "_C41_BCDGetData@12" (ByVal msg As Long, ByVal msb As Integer, ByVal lsb As Integer) As Long
Public Declare Function C41_BCDGetMant Lib "C41W32.DLL" Alias "_C41_BCDGetMant@8" (ByVal msg As Long, ByVal sigdig As Integer) As Long
Public Declare Function C41_BCDGetSign Lib "C41W32.DLL" Alias "_C41_BCDGetSign@4" (ByVal msg As Long) As Integer
Public Declare Function C41_BCDGetSSM Lib "C41W32.DLL" Alias "_C41_BCDGetSSM@4" (ByVal msg As Long) As Integer
Public Declare Function C41_BCDGetVal Lib "C41W32.DLL" Alias "_C41_BCDGetVal@16" (ByRef buf As String, ByVal msg As Long, ByVal sigdig As Integer, ByRef resolstr As String) As Long
Public Declare Function C41_BCDPutData Lib "C41W32.DLL" Alias "_C41_BCDPutData@16" (ByVal msg As Long, ByVal value As Long, ByVal msb As Integer, ByVal lsb As Integer) As Long
Public Declare Function C41_BCDPutMant Lib "C41W32.DLL" Alias "_C41_BCDPutMant@16" (ByVal msg As Long, ByVal value As Long, ByVal sigdig As Integer, ByVal sign As Integer) As Long
Public Declare Function C41_BCDPutSign Lib "C41W32.DLL" Alias "_C41_BCDPutSign@8" (ByVal msg As Long, ByVal sign As Integer) As Long
Public Declare Function C41_BCDPutSSM Lib "C41W32.DLL" Alias "_C41_BCDPutSSM@8" (ByVal msg As Long, ByVal value As Integer) As Long
Public Declare Function C41_BCDPutVal Lib "C41W32.DLL" Alias "_C41_BCDPutVal@16" (ByRef buf As String, ByVal msg As Long, ByVal sigdig As Integer, ByRef resolstr As String) As Long
Public Declare Function C41_BNRGetData Lib "C41W32.DLL" Alias "_C41_BNRGetData@12" (ByVal msg As Long, ByVal msb As Integer, ByVal lsb As Integer) As Long
Public Declare Function C41_BNRGetMant Lib "C41W32.DLL" Alias "_C41_BNRGetMant@8" (ByVal msg As Long, ByVal sigbit As Integer) As Long
Public Declare Function C41_BNRGetSign Lib "C41W32.DLL" Alias "_C41_BNRGetSign@4" (ByVal msg As Long) As Integer
Public Declare Function C41_BNRGetSSM Lib "C41W32.DLL" Alias "_C41_BNRGetSSM@4" (ByVal msg As Long) As Integer
Public Declare Function C41_BNRGetVal Lib "C41W32.DLL" Alias "_C41_BNRGetVal@16" (ByRef buf As String, ByVal msg As Long, ByVal sigbit As Integer, ByRef resolstr As String) As Long
Public Declare Function C41_BNRPutData Lib "C41W32.DLL" Alias "_C41_BNRPutData@16" (ByVal msg As Long, ByVal value As Long, ByVal msb As Integer, ByVal lsb As Integer) As Long
Public Declare Function C41_BNRPutMant Lib "C41W32.DLL" Alias "_C41_BNRPutMant@16" (ByVal msg As Long, ByVal value As Long, ByVal sigbit As Integer, ByVal twos As Integer) As Long
Public Declare Function C41_BNRPutSign Lib "C41W32.DLL" Alias "_C41_BNRPutSign@8" (ByVal msg As Long, ByVal twos As Integer) As Long
Public Declare Function C41_BNRPutSSM Lib "C41W32.DLL" Alias "_C41_BNRPutSSM@8" (ByVal msg As Long, ByVal value As Integer) As Long
Public Declare Function C41_BNRPutVal Lib "C41W32.DLL" Alias "_C41_BNRPutVal@16" (ByRef buf As String, ByVal msg As Long, ByVal sigbit As Integer, ByRef resolstr As String) As Long
Public Declare Function C41_ChCheck Lib "C41W32.DLL" Alias "_C41_ChCheck@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_ChClear Lib "C41W32.DLL" Alias "_C41_ChClear@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_ChConfig Lib "C41W32.DLL" Alias "_C41_ChConfig@12" (ByVal configval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_ChPause Lib "C41W32.DLL" Alias "_C41_ChPause@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_ChResume Lib "C41W32.DLL" Alias "_C41_ChResume@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_CloseAll Lib "C41W32.DLL" Alias "_C41_CloseAll@0" () As Long
Public Declare Function C41_CloseCard Lib "C41W32.DLL" Alias "_C41_CloseCard@4" (ByVal handleval As Long) As Long
Public Declare Function C41_ExtRd Lib "C41W32.DLL" Alias "_C41_ExtRd@4" (ByVal handleval As Long) As Long
Public Declare Function C41_ExtWr Lib "C41W32.DLL" Alias "_C41_ExtWr@8" (ByVal extflag As Long, ByVal handleval As Long) As Long
Public Declare Function C41_FilterDefault Lib "C41W32.DLL" Alias "_C41_FilterDefault@12" (ByVal msgnum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_FilterSet Lib "C41W32.DLL" Alias "_C41_FilterSet@20" (ByVal labelval As Long, ByVal sdimask As Long, ByVal msgnum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_FldGetData Lib "C41W32.DLL" Alias "_C41_FldGetData@4" (ByVal msgval As Long) As Long
Public Declare Function C41_FldGetLabel Lib "C41W32.DLL" Alias "_C41_FldGetLabel@4" (ByVal msgval As Long) As Integer
Public Declare Function C41_FldGetParity Lib "C41W32.DLL" Alias "_C41_FldGetParity@4" (ByVal msgval As Long) As Integer
Public Declare Function C41_FldGetSDI Lib "C41W32.DLL" Alias "_C41_FldGetSDI@4" (ByVal msgval As Long) As Integer
Public Declare Function C41_FldGetValue Lib "C41W32.DLL" Alias "_C41_FldGetValue@12" (ByVal msgval As Long, ByVal startbit As Integer, ByVal endbit As Integer) As Long
Public Declare Function C41_FldPutData Lib "C41W32.DLL" Alias "_C41_FldPutData@8" (ByVal msgval As Long, ByVal data As Long) As Long
Public Declare Function C41_FldPutLabel Lib "C41W32.DLL" Alias "_C41_FldPutLabel@8" (ByVal msgval As Long, ByVal label As Integer) As Long
Public Declare Function C41_FldPutSDI Lib "C41W32.DLL" Alias "_C41_FldPutSDI@8" (ByVal msgval As Long, ByVal sdi As Integer) As Long
Public Declare Function C41_FldPutValue Lib "C41W32.DLL" Alias "_C41_FldPutValue@16" (ByVal msgval As Long, ByVal dataval As Long, ByVal startbit As Integer, ByVal endbit As Integer) As Long
Public Declare Function C41_IntDin Lib "C41W32.DLL" Alias "_C41_IntDin@4" (ByVal handleval As Long) As Long
Public Declare Function C41_IntRd Lib "C41W32.DLL" Alias "_C41_IntRd@12" (ByRef typevalval As Integer, ByRef infoval As Integer, ByVal handleval As Long) As Integer
Public Declare Function C41_ListMakeRcv Lib "C41W32.DLL" Alias "_C41_ListMakeRcv@12" (ByVal count As Integer, ByVal msgnum As Long, ByVal handleval As Long) As Integer
Public Declare Function C41_ListMakeXmt Lib "C41W32.DLL" Alias "_C41_ListMakeXmt@12" (ByVal count As Integer, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function C41_ListRd Lib "C41W32.DLL" Alias "_C41_ListRd@12" (ByRef msgval As Long, ByVal listaddr As Integer, ByVal handleval As Long) As Integer
Public Declare Function C41_ListStatus Lib "C41W32.DLL" Alias "_C41_ListStatus@8" (ByVal listaddr As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_ListWr Lib "C41W32.DLL" Alias "_C41_ListWr@12" (ByVal msgval As Long, ByVal listaddr As Integer, ByVal handleval As Long) As Integer
Public Declare Function C41_MemPeek Lib "C41W32.DLL" Alias "_C41_MemPeek@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function C41_MemPoke Lib "C41W32.DLL" Alias "_C41_MemPoke@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C41_MsgArincRd Lib "C41W32.DLL" Alias "_C41_MsgArincRd@8" (ByVal msgnum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_MsgArincWr Lib "C41W32.DLL" Alias "_C41_MsgArincWr@12" (ByVal msgval As Long, ByVal msgnum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_MsgBlockRd Lib "C41W32.DLL" Alias "_C41_MsgBlockRd@12" (ByRef valueptr As Integer, ByVal msgnum As Long, ByVal handleval As Long) As Integer
Public Declare Function C41_MsgBlockWr Lib "C41W32.DLL" Alias "_C41_MsgBlockWr@12" (ByRef valueptr As Integer, ByVal msgnum As Long, ByVal handleval As Long) As Integer
Public Declare Function C41_MsgCommRd Lib "C41W32.DLL" Alias "_C41_MsgCommRd@12" (ByRef valueptr As Integer, ByVal msgnum As Long, ByVal handleval As Long) As Integer
Public Declare Function C41_MsgCommWr Lib "C41W32.DLL" Alias "_C41_MsgCommWr@12" (ByRef valueptr As Integer, ByVal msgnum As Long, ByVal handleval As Long) As Integer
Public Declare Function C41_MsgConfig Lib "C41W32.DLL" Alias "_C41_MsgConfig@12" (ByVal configval As Integer, ByVal msgnum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_MsgEncoderRd Lib "C41W32.DLL" Alias "_C41_MsgEncoderRd@8" (ByVal msgnum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_MsgEncoderWr Lib "C41W32.DLL" Alias "_C41_MsgEncoderWr@12" (ByVal msgval As Long, ByVal msgnum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_OpenCard Lib "C41W32.DLL" Alias "_C41_OpenCard@4" (ByVal cardnum As Long) As Long
Public Declare Function C41_Reset Lib "C41W32.DLL" Alias "_C41_Reset@4" (ByVal handleval As Long) As Long
Public Declare Function C41_Restart Lib "C41W32.DLL" Alias "_C41_Restart@4" (ByVal handleval As Long) As Long
Public Declare Function C41_SchedBranch Lib "C41W32.DLL" Alias "_C41_SchedBranch@16" (ByVal schindex As Long, ByVal condition As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_SchedBuild Lib "C41W32.DLL" Alias "_C41_SchedBuild@24" (ByVal basevalmsgnum As Long, ByVal nummsgs As Integer, ByRef minperiod As Long, ByRef maxperiod As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_SchedCall Lib "C41W32.DLL" Alias "_C41_SchedCall@12" (ByVal schindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_SchedGap Lib "C41W32.DLL" Alias "_C41_SchedGap@12" (ByVal gapval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_SchedHalt Lib "C41W32.DLL" Alias "_C41_SchedHalt@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_SchedInt Lib "C41W32.DLL" Alias "_C41_SchedInt@12" (ByVal tagval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_SchedMsg Lib "C41W32.DLL" Alias "_C41_SchedMsg@12" (ByVal msgnum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_SchedPause Lib "C41W32.DLL" Alias "_C41_SchedPause@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_SchedPulse Lib "C41W32.DLL" Alias "_C41_SchedPulse@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_SchedRestart Lib "C41W32.DLL" Alias "_C41_SchedRestart@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_SchedRet Lib "C41W32.DLL" Alias "_C41_SchedRet@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_SchedStart Lib "C41W32.DLL" Alias "_C41_SchedStart@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_SelfTest Lib "C41W32.DLL" Alias "_C41_SelfTest@4" (ByVal handleval As Long) As Long
Public Declare Function C41_SeqClear Lib "C41W32.DLL" Alias "_C41_SeqClear@4" (ByVal handleval As Long) As Long
Public Declare Function C41_SeqConfig Lib "C41W32.DLL" Alias "_C41_SeqConfig@16" (ByVal configval As Integer, ByVal interval As Long, ByVal cardnum As Long, ByVal handleval As Long) As Long
Public Declare Function C41_SeqRd Lib "C41W32.DLL" Alias "_C41_SeqRd@12" (ByRef msgval As Long, ByRef stampval As Long, ByVal handleval As Long) As Integer
Public Declare Function C41_Start Lib "C41W32.DLL" Alias "_C41_Start@4" (ByVal handleval As Long) As Integer
Public Declare Function C41_Stop Lib "C41W32.DLL" Alias "_C41_Stop@4" (ByVal handleval As Long) As Integer
